--- a/resources/home.html
+++ b/resources/home.html
@@ -52,14 +52,112 @@
     </nav>
     </div><!--/ adattarsi, search, sign up or in -->
 
+
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <h1>Choose your <strong><em>body type</em></strong>!</h1>
+	<div class="row" style="padding-left:60px; padding-right:60px; padding-top:30px;">
+    	  <div class="col-md-4" style="padding:0px;">
+	    <div class="col-md-4" style="display: inline-block;text-align: center;">	
+	      <img src="bodytype/bt1.jpg" style="width: 84px; height: 242px" alt="body type 1">
+              <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Type 1</a> -->
+              <input type="checkbox" id="btCheckbox1" value="option1">
+	    </div>
+	    <div class="col-md-4" style="display: inline-block;text-align: center;">
+	      <img src="bodytype/bt2.jpg" style="width: 84px; height:242px" alt="body type 2">
+	      <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Type 2</a> -->
+              <input type="checkbox" id="btCheckbox2" value="option2">
+	    </div>
+	    <div class="col-md-4" style="display: inline-block;text-align: center;">
+	      <img src="bodytype/bt3.jpg" style="width:84px; height:242px" alt="body type 3">
+	      <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Type 3</a> -->
+              <input type="checkbox" id="btCheckbox3" value="option3">
+	    </div>
+	  </div>
+	  <div class="col-md-4"style="padding:0px;">
+	    <div class="col-md-4" style="display: inline-block;text-align: center;">
+	      <img src="bodytype/bt4.jpg" class="img-responsive" alt="body type 4">
+	      <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Type 4</a> -->
+              <input type="checkbox" id="btCheckbox4" value="option4">
+	    </div>
+	    <div class="col-md-4" style="display: inline-block;text-align: center;">
+	      <img src="bodytype/bt5.jpg" class="img-responsive" alt="body type 5">
+	      <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Type 5</a> -->
+              <input type="checkbox" id="btCheckbox5" value="option5">
+	    </div>
+	    <div class="col-md-4" style="display: inline-block;text-align: center;">
+	      <img src="bodytype/bt6.jpg" class="img-responsive" alt="body type 6">
+	      <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Type 6</a> -->
+              <input type="checkbox" id="btCheckbox6" value="option6">
+	    </div>
+	  </div>
+	  <div class="col-md-4"style="padding:0px;">
+	    <div class="col-md-4" style="display: inline-block;text-align: center;">
+	      <img src="bodytype/bt7.jpg" class="img-responsive" alt="body type 7">
+	      <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Type 7</a> -->
+              <input type="checkbox" id="btCheckbox7" value="option7">
+	    </div>
+	    <div class="col-md-4" style="display: inline-block;text-align: center;">
+	      <img src="bodytype/bt8.jpg" class="img-responsive" alt="body type 8">
+	      <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Type 8</a> -->
+              <input type="checkbox" id="btCheckbox8" value="option8">
+	    </div>
+	    <div class="col-md-4" style="display: inline-block;text-align: center;">
+	      <img src="bodytype/bt9.jpg" class="img-responsive" alt="body type 9">
+	      <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Type 9</a> -->
+              <input type="checkbox" id="btCheckbox9" value="option9">
+	    </div>
+	  </div>
+	</div>
       </div>
     </div>
+
+    <div class="container">
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-md-3">
+          <a href="#" role="button">
+            <img src="images/1.jpg" class="img-responsive" alt="post image">
+          </a>
+          <hr>
+          <a href="#" role="button">
+            <img src="images/4.jpg" class="img-responsive" alt="post image">
+          </a>
+          <hr>
+        </div>
+        <div class="col-md-3">
+          <a href="#" role="button">
+            <img src="images/2.jpg" class="img-responsive" style="border: 3px solid goldenrod" alt="post image">
+          </a>
+          <hr>
+          <a href="#" role="button">
+            <img src="images/5.jpg" class="img-responsive" alt="post image">
+          </a>
+          <hr>
+       </div>
+        <div class="col-md-3">
+          <a href="#" role="button">
+            <img src="images/3.jpg" class="img-responsive" alt="post image">
+          </a>
+          <hr>
+        </div>
+        <div class="col-md-3">
+          <a href="#" role="button">
+            <img src="images/6.jpg" class="img-responsive" alt="post image">
+          </a>
+          <hr>
+        </div>
+      </div>
+
+      <hr>
+
+      <footer>
+        <p>&copy; Adattarsi 2015</p>
+      </footer>
+    </div> <!-- /container -->
+
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="assets/js/jquery.min.js"></script>
