--- a/resources/myhome.html
+++ b/resources/myhome.html
@@ -40,6 +40,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Mypost <span class="badge">3</span></a></li>
             <li><a href="#">Profile</a></li>
+	    <li><a href="#">Post</a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <input type="text" class="form-control" placeholder="Search...">
