real real final

--- a/resources/myhome.html
+++ b/resources/myhome.html
@@ -41,6 +41,7 @@
             <li><a href="#">Mypost <span class="badge">3</span></a></li>
             <li><a href="#">Profile</a></li>
 	    <li><a href="#">Post</a></li>
+	    <li><a href="#">Sign out</a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <input type="text" class="form-control" placeholder="Search...">
